@@ -47,6 +47,7 @@ densistymatrix = False
 reducedmatrix = False
 occen = False
 offdiag = False
+offdiagsingles = False
 energies = False
 decomposition = False
 diagexp = False
